<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thrift</string>
    <string name="facebook_app_id">994349763908709</string>
    <string name="hello_world">This activity will provide search results</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="inbox">Inbox</string>
    <string name="noti">Notifications</string>
    <string name="settings">Settings</string>

    <color name="green">#007f00</color>
    <color name="red">#FF0000</color>
    <string name="title_activity_splash">SplashActivity</string>

    <string-array name="menuItems">
        <item>Buying</item>
        <item>Selling</item>
        <item>Watching</item>
        <item>Inbox</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <array name="menuIcons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
