<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.drops.drops.MenuFragment">

    <Button
        android:id="@+id/buyingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buying"
        android:textSize="@dimen/abc_text_size_large_material" />

    <Button
        android:id="@+id/sellingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selling"
        android:textSize="@dimen/abc_text_size_large_material" />

    <Button
        android:id="@+id/inboxButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inbox"
        android:textSize="@dimen/abc_text_size_large_material" />

    <Button
        android:id="@+id/notiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti"
        android:textSize="@dimen/abc_text_size_large_material" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/abc_text_size_large_material" />

</LinearLayout>
